@@ -74,7 +74,8 @@ will become a horizontal rule.
 .Pp
 If the first line of a honk begins with
 .Dq DZ:
-(danger zone) it will be used a summary and the post marked sensitive. 
+(danger zone) or any other combination of two letters and a colon,
+it will be used a summary and the post marked sensitive.
 .Pp
 Mentioning a specfic user such as
 .Pq @user@example.social
