@@ -170,12 +170,14 @@ func replaceimgsand(zap map[string]bool, absolute bool) func(node *html.Node) st
 	}
 }
 
+var re_dangerous = regexp.MustCompile("^[a-zA-Z]{2}:")
+
 func translate(honk *Honk) {
 	if honk.Format == "html" {
 		return
 	}
 	noise := honk.Noise
-	if strings.HasPrefix(noise, "DZ:") {
+	if re_dangerous.MatchString(noise) {
 		idx := strings.Index(noise, "\n")
 		if idx == -1 {
 			honk.Precis = noise
