@@ -2,6 +2,12 @@ changelog
 
 === next
 
++ All inclusive danger zone spoiler alerts.
+
++ Emu peeker
+
++ CSP compliance
+
 + Fix argv for chpass.
 
 + Avoid self mention in reply all.
